# competency-graph

./: README.md
competency_graph/: docker-compose.yaml  dockerfile.competency_graph  pyproject.toml  requirements.txt
competency_graph/app/: main.py
competency_graph/app/api/v1/: __init__.py  competencies.py  users.py
competency_graph/app/config/: config.py
competency_graph/app/dao/: base.py  competency_dao.py  dockerfile  graph_db.entrypoint.sh  models.py  node_version.py  user.py
competency_graph/app/db/: __init__.py  ontology.py
competency_graph/app/db/migrations/: 0001_init.sql
competency_graph/app/db/queries/graph/: cascade_delete.rq  insert_data.rq  ontology.ttl  ontology2.ttl
competency_graph/app/dependencies/: __init__.py  config.py  graphdb.py  postgres.py  redis.py
competency_graph/app/middlewares/: auth.py
competency_graph/app/models/: __init__.py  comments.py  graph.py  user.py
competency_graph/app/services/: auth.py
competency_graph/competency_graph/: dockerfile.competency_graph  pyproject.toml  requirements.txt
competency_graph/competency_graph/app/: dockerfile.competency_graph  main.py
competency_graph/competency_graph/app/api/v1/: __init__.py  comments.py  (+1 more)
competency_graph/competency_graph/app/dao/: comments.py  competencies.ttl  competency_dao.py  init-repository.sh  main.py  models.py  repository-config.ttl
competency_graph/competency_graph/app/db/: __init__.py
competency_graph/competency_graph/app/dependencies/: postgres.py
competency_graph/competency_graph/app/models/: base.py  conflicts.py  graph.py  versioning.py
